--- a/copy_deploy_wallpaper.yml
+++ b/copy_deploy_wallpaper.yml
@@ -10,3 +10,13 @@
       dest: /home/itops/Pictures/wallpaper.jpg
       owner: root
       group: root
+ 
+  - name: set wallpaper
+    dconf:
+      key: "/org/gnome/desktop/background/picture-uri"
+      value: "'file://home/itops/Pictures/wallpaper.jpg'"
+
+  - name: set wallpaper position
+    dconf:
+      key: "/ord/gnome/desktop/background/picture-options"
+      value: "'zoom'"
