modified deploy wallpaper play

--- a/copy_deploy_wallpaper.yml
+++ b/copy_deploy_wallpaper.yml
@@ -12,11 +12,13 @@
       group: root
  
   - name: set wallpaper
+    become_user: itops
     dconf:
       key: "/org/gnome/desktop/background/picture-uri"
-      value: "'file://home/itops/Pictures/wallpaper.jpg'"
+      value: "'file:///home/itops/Pictures/wallpaper.jpg'"
 
   - name: set wallpaper position
+    become_user: itops
     dconf:
       key: "/ord/gnome/desktop/background/picture-options"
       value: "'zoom'"
