--- a/copy_deploy_wallpaper.yml
+++ b/copy_deploy_wallpaper.yml
@@ -24,10 +24,8 @@
  
   - name: set wallpaper
     dconf:
-      key: "/org/gnome/desktop/background/picture-uri/"
-      value: "'file:///usr/share/backgrounds/wallpaper_test.jpg'"
+      key: "/org/gnome/desktop/background/picture-uri/" value: "'file:///usr/share/backgrounds/wallpaper_test.jpg'"
 
   - name: set wallpaper position
     dconf:
-      key: "/org/gnome/desktop/background/picture-options/"
-      value: "'zoom'"
+      key: "/org/gnome/desktop/background/picture-options/" value: "'zoom'"
