changed dconf syntax

--- a/copy_deploy_wallpaper.yml
+++ b/copy_deploy_wallpaper.yml
@@ -23,9 +23,11 @@
       group: root
  
   - name: set wallpaper
-    dconf:
-      key: "/org/gnome/desktop/background/picture-uri/" value: "'file:///usr/share/backgrounds/wallpaper_test.jpg'"
+    community.general.dconf:
+      key: "/org/gnome/desktop/background/picture-uri/" 
+      value: "'file:///usr/share/backgrounds/wallpaper_test.jpg'"
 
   - name: set wallpaper position
-    dconf:
-      key: "/org/gnome/desktop/background/picture-options/" value: "'zoom'"
+    community.general.dconf:
+      key: "/org/gnome/desktop/background/picture-options/" 
+      value: "'zoom'"
