--- a/copy_deploy_wallpaper.yml
+++ b/copy_deploy_wallpaper.yml
@@ -23,11 +23,13 @@
       group: root
  
   - name: set wallpaper
+    become_user: root
     community.general.dconf:
       key: "/org/gnome/desktop/background/picture-uri" 
       value: "'file:///usr/share/backgrounds/wallpaper_test.jpg'"
 
   - name: set wallpaper position
+    become_user: root
     community.general.dconf:
       key: "/org/gnome/desktop/background/picture-options" 
       value: "'zoom'"
