--- a/copy_deploy_wallpaper.yml
+++ b/copy_deploy_wallpaper.yml
@@ -25,11 +25,11 @@
   - name: set wallpaper
     become_user: root
     dconf:
-      key: /org/gnome/desktop/background/picture-uri/ 
+      key: "/org/gnome/desktop/background/picture-uri" 
       value: "'file:///usr/share/backgrounds/wallpaper_test.jpg'"
 
   - name: set wallpaper position
     become_user: root
     dconf:
-      key: /org/gnome/desktop/background/picture-options/ 
+      key: "/org/gnome/desktop/background/picture-options"
       value: "'zoom'"
