--- a/copy_deploy_wallpaper.yml
+++ b/copy_deploy_wallpaper.yml
@@ -22,6 +22,4 @@
       group: root
  
   - name: set wallpaper
-    ansible.builtin.script: /usr/share/backgrounds/change-background.sh
-      owner: root
-      group: root
+    ansible.builtin.script: /home/change-background.sh
