added pop-up message playbook

--- a/hosts.ini
+++ b/hosts.ini
@@ -5,6 +5,10 @@ WON-DGT-PC0812 ansible_host=10.111.85.95
 WON-DGT-PC0813 ansible_host=10.111.85.224
 WON-DGT-PC0814 ansible_host=10.111.85.115
 WON-DGT-PC0815 ansible_host=10.111.85.65
+WON-DGT-PC0887 ansible_host=10.111.84.109
+
+[troubleshooting]
+WON-DGT-PC0887 ansible_host=10.111.84.109
 
 
 [windowsnodes]
