added several files

--- a/hosts.ini
+++ b/hosts.ini
@@ -1,14 +1,220 @@
 [zorinnodes]
-WON-DGT-PC0810 ansible_host=10.111.85.190
-WON-DGT-PC0811 ansible_host=10.111.85.32
-WON-DGT-PC0812 ansible_host=10.111.85.95
-WON-DGT-PC0813 ansible_host=10.111.85.224
-WON-DGT-PC0814 ansible_host=10.111.85.115
-WON-DGT-PC0815 ansible_host=10.111.85.65
-WON-DGT-PC0887 ansible_host=10.111.84.109
+WON-DGT-PC0810 ansible_host=10.111.84.100
+WON-DGT-PC0811 ansible_host=10.111.84.101
+WON-DGT-PC0812 ansible_host=10.111.84.102
+WON-DGT-PC0813 ansible_host=10.111.84.103
+WON-DGT-PC0814 ansible_host=10.111.84.104
+WON-DGT-PC0815 ansible_host=10.111.84.105
+WON-DGT-PC0816 ansible_host=10.111.84.106
+WON-DGT-PC0817 ansible_host=10.111.84.107
+WON-DGT-PC0818 ansible_host=10.111.84.108
+WON-DGT-PC0819 ansible_host=10.111.84.109
 
 [troubleshooting]
-WON-DGT-PC0887 ansible_host=10.111.84.109
+HOST ansible_host=10.111.87.201
+
+[subnetscan]
+HOST1 ansible_host=10.111.84.25
+HOST2 ansible_host=10.111.84.26
+HOST3 ansible_host=10.111.84.27
+HOST4 ansible_host=10.111.84.28
+HOST5 ansible_host=10.111.84.29
+HOST6 ansible_host=10.111.84.30
+HOST7 ansible_host=10.111.84.31
+HOST8 ansible_host=10.111.84.33
+HOST9 ansible_host=10.111.84.34
+HOST10 ansible_host=10.111.84.35
+HOST11 ansible_host=10.111.84.37
+HOST12 ansible_host=10.111.84.38
+HOST13 ansible_host=10.111.84.39
+HOST14 ansible_host=10.111.84.40
+HOST15 ansible_host=10.111.84.41
+HOST16 ansible_host=10.111.84.42
+HOST17 ansible_host=10.111.84.43
+HOST18 ansible_host=10.111.84.44
+HOST19 ansible_host=10.111.84.45
+HOST20 ansible_host=10.111.84.47
+HOST21 ansible_host=10.111.84.48
+HOST22 ansible_host=10.111.84.49
+HOST23 ansible_host=10.111.84.50
+HOST24 ansible_host=10.111.84.51
+HOST25 ansible_host=10.111.84.52
+HOST26 ansible_host=10.111.84.53
+HOST27 ansible_host=10.111.84.54
+HOST28 ansible_host=10.111.84.56
+HOST29 ansible_host=10.111.84.57
+HOST30 ansible_host=10.111.84.60
+HOST31 ansible_host=10.111.84.61
+HOST32 ansible_host=10.111.84.62
+HOST33 ansible_host=10.111.84.63
+HOST34 ansible_host=10.111.84.64
+HOST35 ansible_host=10.111.84.65
+HOST36 ansible_host=10.111.84.66
+HOST37 ansible_host=10.111.84.67
+HOST38 ansible_host=10.111.84.68
+HOST39 ansible_host=10.111.84.69
+HOST40 ansible_host=10.111.84.70
+HOST41 ansible_host=10.111.84.71
+HOST42 ansible_host=10.111.84.72
+HOST43 ansible_host=10.111.84.73
+HOST44 ansible_host=10.111.84.75
+HOST45 ansible_host=10.111.84.76
+HOST46 ansible_host=10.111.84.77
+HOST47 ansible_host=10.111.84.78
+HOST48 ansible_host=10.111.84.79
+HOST49 ansible_host=10.111.84.81
+HOST50 ansible_host=10.111.84.83
+HOST51 ansible_host=10.111.84.84
+HOST52 ansible_host=10.111.84.85
+HOST53 ansible_host=10.111.84.87
+HOST54 ansible_host=10.111.84.88
+HOST55 ansible_host=10.111.84.89
+HOST56 ansible_host=10.111.84.90
+HOST57 ansible_host=10.111.84.92
+HOST58 ansible_host=10.111.84.93
+HOST59 ansible_host=10.111.84.95
+HOST60 ansible_host=10.111.84.96
+HOST61 ansible_host=10.111.84.97
+HOST62 ansible_host=10.111.84.98
+HOST63 ansible_host=10.111.84.99
+HOST64 ansible_host=10.111.84.100
+HOST65 ansible_host=10.111.84.103
+HOST66 ansible_host=10.111.84.104
+HOST67 ansible_host=10.111.84.105
+HOST68 ansible_host=10.111.84.106
+HOST69 ansible_host=10.111.84.107
+HOST70 ansible_host=10.111.84.108
+HOST71 ansible_host=10.111.84.109
+HOST72 ansible_host=10.111.84.110
+HOST73 ansible_host=10.111.84.111
+HOST74 ansible_host=10.111.84.112
+HOST75 ansible_host=10.111.84.113
+HOST76 ansible_host=10.111.84.114
+HOST77 ansible_host=10.111.84.115
+HOST78 ansible_host=10.111.84.116
+HOST79 ansible_host=10.111.84.117
+HOST80 ansible_host=10.111.84.118
+HOST81 ansible_host=10.111.84.119
+HOST82 ansible_host=10.111.84.120
+HOST83 ansible_host=10.111.84.121
+HOST84 ansible_host=10.111.84.123
+HOST85 ansible_host=10.111.84.124
+HOST86 ansible_host=10.111.84.125
+HOST87 ansible_host=10.111.84.126
+HOST88 ansible_host=10.111.84.127
+HOST89 ansible_host=10.111.84.128
+HOST90 ansible_host=10.111.84.129
+HOST91 ansible_host=10.111.84.130
+HOST92 ansible_host=10.111.84.131
+HOST93 ansible_host=10.111.84.132
+HOST94 ansible_host=10.111.84.133
+HOST95 ansible_host=10.111.84.134
+HOST96 ansible_host=10.111.84.135
+HOST97 ansible_host=10.111.84.137
+HOST98 ansible_host=10.111.84.138
+HOST99 ansible_host=10.111.84.139
+HOST100 ansible_host=10.111.84.140
+HOST101 ansible_host=10.111.84.141
+HOST102 ansible_host=10.111.84.142
+HOST103 ansible_host=10.111.84.143
+HOST104 ansible_host=10.111.84.144
+HOST105 ansible_host=10.111.84.145
+HOST106 ansible_host=10.111.84.146
+HOST107 ansible_host=10.111.84.147
+HOST108 ansible_host=10.111.84.148
+HOST109 ansible_host=10.111.84.149
+HOST110 ansible_host=10.111.84.150
+HOST111 ansible_host=10.111.84.151
+HOST112 ansible_host=10.111.84.152
+HOST113 ansible_host=10.111.84.153
+HOST114 ansible_host=10.111.84.154
+HOST115 ansible_host=10.111.84.155
+HOST116 ansible_host=10.111.84.156
+HOST117 ansible_host=10.111.84.157
+HOST118 ansible_host=10.111.84.158
+HOST119 ansible_host=10.111.84.159
+HOST120 ansible_host=10.111.84.160
+HOST121 ansible_host=10.111.84.161
+HOST122 ansible_host=10.111.84.162
+HOST123 ansible_host=10.111.84.163
+HOST124 ansible_host=10.111.84.164
+HOST125 ansible_host=10.111.84.165
+HOST126 ansible_host=10.111.84.167
+HOST127 ansible_host=10.111.84.168
+HOST128 ansible_host=10.111.84.169
+HOST129 ansible_host=10.111.84.170
+HOST130 ansible_host=10.111.84.171
+HOST131 ansible_host=10.111.84.172
+HOST132 ansible_host=10.111.84.173
+HOST133 ansible_host=10.111.84.174
+HOST134 ansible_host=10.111.84.175
+HOST135 ansible_host=10.111.84.176
+HOST136 ansible_host=10.111.84.177
+HOST137 ansible_host=10.111.84.178
+HOST138 ansible_host=10.111.84.179
+HOST139 ansible_host=10.111.84.180
+HOST140 ansible_host=10.111.84.181
+HOST141 ansible_host=10.111.84.182
+HOST142 ansible_host=10.111.84.183
+HOST143 ansible_host=10.111.84.184
+HOST144 ansible_host=10.111.84.185
+HOST145 ansible_host=10.111.84.186
+HOST146 ansible_host=10.111.84.188
+HOST147 ansible_host=10.111.84.189
+HOST148 ansible_host=10.111.84.190
+HOST149 ansible_host=10.111.84.192
+HOST150 ansible_host=10.111.84.193
+HOST151 ansible_host=10.111.84.194
+HOST152 ansible_host=10.111.84.196
+HOST153 ansible_host=10.111.84.197
+HOST154 ansible_host=10.111.84.198
+HOST155 ansible_host=10.111.84.199
+HOST156 ansible_host=10.111.84.200
+HOST157 ansible_host=10.111.84.201
+HOST158 ansible_host=10.111.84.202
+HOST159 ansible_host=10.111.84.203
+HOST160 ansible_host=10.111.84.204
+HOST161 ansible_host=10.111.84.205
+HOST162 ansible_host=10.111.84.206
+HOST163 ansible_host=10.111.84.207
+HOST164 ansible_host=10.111.84.208
+HOST165 ansible_host=10.111.84.209
+HOST166 ansible_host=10.111.84.210
+HOST167 ansible_host=10.111.84.212
+HOST168 ansible_host=10.111.84.214
+HOST169 ansible_host=10.111.84.215
+HOST170 ansible_host=10.111.84.216
+HOST171 ansible_host=10.111.84.217
+HOST172 ansible_host=10.111.84.218
+HOST173 ansible_host=10.111.84.219
+HOST174 ansible_host=10.111.84.220
+HOST175 ansible_host=10.111.84.221
+HOST176 ansible_host=10.111.84.222
+HOST177 ansible_host=10.111.84.223
+HOST178 ansible_host=10.111.84.224
+HOST179 ansible_host=10.111.84.225
+HOST180 ansible_host=10.111.84.226
+HOST181 ansible_host=10.111.84.227
+HOST182 ansible_host=10.111.84.228
+HOST183 ansible_host=10.111.84.230
+HOST184 ansible_host=10.111.84.231
+HOST185 ansible_host=10.111.84.232
+HOST186 ansible_host=10.111.84.233
+HOST187 ansible_host=10.111.84.234
+HOST188 ansible_host=10.111.84.235
+HOST189 ansible_host=10.111.84.236
+HOST190 ansible_host=10.111.84.237
+HOST191 ansible_host=10.111.84.238
+HOST192 ansible_host=10.111.84.240
+HOST193 ansible_host=10.111.84.241
+HOST194 ansible_host=10.111.84.242
+HOST195 ansible_host=10.111.84.243
+HOST196 ansible_host=10.111.84.244
+HOST197 ansible_host=10.111.84.245
+HOST198 ansible_host=10.111.84.247
+HOST199 ansible_host=10.111.84.248
+HOST200 ansible_host=10.111.84.249
+
 
 
 [windowsnodes]
