--- a/hosts.ini
+++ b/hosts.ini
@@ -230,3 +230,6 @@ ansible_port=5986
 ansible_winrm_transport=ntlm
 ansible_winrm_operation_timeout_sec=60
 ansible_winrm_read_timeout_sec=9
+
+[all:vars]
+ansible_become_pass=w0nd3r$c0
