--- a/hosts.ini
+++ b/hosts.ini
@@ -19,6 +19,15 @@ HOST3 ansible_host=10.111.84.240
 HOST3 ansible_host=10.111.84.81
 HOST3 ansible_host=10.111.84.40
 
+[test-bay]
+HOST1 ansible_host=10.111.84.109
+HOST2 ansible_host=10.111.85.99
+HOST3 ansible_host=10.111.84.150
+HOST3 ansible_host=10.111.84.220
+HOST3 ansible_host=10.111.84.240
+HOST3 ansible_host=10.111.84.81
+HOST3 ansible_host=10.111.84.40
+
 
 
 
