--- a/hosts.ini
+++ b/hosts.ini
@@ -11,13 +11,7 @@ WON-DGT-PC0818 ansible_host=10.111.84.108
 WON-DGT-PC0819 ansible_host=10.111.84.109
 
 [troubleshooting]
-HOST1 ansible_host=10.111.84.109
-HOST2 ansible_host=10.111.85.99
-HOST3 ansible_host=10.111.84.150
-HOST3 ansible_host=10.111.84.220
-HOST3 ansible_host=10.111.84.240
-HOST3 ansible_host=10.111.84.81
-HOST3 ansible_host=10.111.84.40
+WON-DGT-PC0819 ansible_host=10.111.84.109
 
 [test-bay]
 HOST1 ansible_host=10.111.84.109
