--- a/hosts.ini
+++ b/hosts.ini
@@ -12,6 +12,9 @@ WON-DGT-PC0819 ansible_host=10.111.84.109
 
 [troubleshooting]
 WON-DGT-PC0819 ansible_host=10.111.84.109
+HOST5 ansible_host=10.111.84.240
+HOST6 ansible_host=10.111.84.81
+HOST7 ansible_host=10.111.84.40
 
 [test-bay]
 HOST1 ansible_host=10.111.84.109
