--- a/hosts.ini
+++ b/hosts.ini
@@ -1,24 +1,30 @@
-[zorinnodes]
-WON-DGT-PC0810 ansible_host=10.111.84.100
-WON-DGT-PC0811 ansible_host=10.111.84.101
-WON-DGT-PC0812 ansible_host=10.111.84.102
-WON-DGT-PC0813 ansible_host=10.111.84.103
-WON-DGT-PC0814 ansible_host=10.111.84.104
-WON-DGT-PC0815 ansible_host=10.111.84.105
-WON-DGT-PC0816 ansible_host=10.111.84.106
-WON-DGT-PC0817 ansible_host=10.111.84.107
-WON-DGT-PC0818 ansible_host=10.111.84.108
-WON-DGT-PC0819 ansible_host=10.111.84.109
+[BAY_N]
+HOST1 ansible_host=10.111.84.234
+HOST2 ansible_host=10.111.84.230
+HOST3 ansible_host=10.111.86.156
+HOST4 ansible_host=10.111.86.179
+HOST5 ansible_host=10.111.84.153
+HOST6 ansible_host=10.111.84.78
+HOST7 ansible_host=10.111.84.188
+HOST8 ansible_host=10.111.84.150
+HOST9 ansible_host=10.111.84.220
+HOST10 ansible_host=10.111.84.240
+HOST11 ansible_host=10.111.84.81
+HOST12 ansible_host=10.111.84.40
 
 [troubleshooting]
-WON-DGT-PC0819 ansible_host=10.111.84.109
-HOST5 ansible_host=10.111.84.240
-HOST6 ansible_host=10.111.84.81
-HOST7 ansible_host=10.111.84.40
-HOST2 ansible_host=10.111.85.99
-HOST3 ansible_host=10.111.84.150
-HOST4 ansible_host=10.111.84.220
-
+HOST1 ansible_host=10.111.84.234
+HOST2 ansible_host=10.111.84.230
+HOST3 ansible_host=10.111.86.156
+HOST4 ansible_host=10.111.86.179
+HOST5 ansible_host=10.111.84.153
+HOST6 ansible_host=10.111.84.78
+HOST7 ansible_host=10.111.84.188
+HOST8 ansible_host=10.111.84.150
+HOST9 ansible_host=10.111.84.220
+HOST10 ansible_host=10.111.84.240
+HOST11 ansible_host=10.111.84.81
+HOST12 ansible_host=10.111.84.40
 
 [windowsnodes]
 WON-DGT-PC0620 ansible_host=10.111.84.238
