hostname on inverntory file

--- a/hosts.ini
+++ b/hosts.ini
@@ -13,18 +13,18 @@ HOST11 ansible_host=10.111.84.81
 HOST12 ansible_host=10.111.84.40
 
 [troubleshooting]
-HOST1 ansible_host=10.111.84.234
-HOST2 ansible_host=10.111.84.230
-HOST3 ansible_host=10.111.86.156
-HOST4 ansible_host=10.111.86.179
-HOST5 ansible_host=10.111.84.153
-HOST6 ansible_host=10.111.84.78
-HOST7 ansible_host=10.111.84.188
-HOST8 ansible_host=10.111.84.150
-HOST9 ansible_host=10.111.84.220
-HOST10 ansible_host=10.111.84.240
-HOST11 ansible_host=10.111.84.81
-HOST12 ansible_host=10.111.84.40
+WON-DGT-PC0589
+WON-DGT-PC0590
+WON-DGT-PC591
+WON-DGT-PC0592
+WON-DGT-PC0593
+WON-DGT-PC0594
+WON-DGT-PC0600
+WON-DGT-PC0599
+WON-DGT-PC0598
+WON-DGT-PC0597
+WON-DGT-PC0596
+WON-DGT-PC0595
 
 [windowsnodes]
 WON-DGT-PC0620 ansible_host=10.111.84.238
