--- a/hosts.ini
+++ b/hosts.ini
@@ -1,19 +1,20 @@
 [BAY_N]
-HOST1 ansible_host=10.111.86.248
+WON-DGT-PC0589 ansible_host=10.111.86.248
+
 
 [troubleshooting]
-WON-DGT-PC0589
-WON-DGT-PC0590
-WON-DGT-PC591
-WON-DGT-PC0592
-WON-DGT-PC0593
-WON-DGT-PC0594
-WON-DGT-PC0600
-WON-DGT-PC0599
-WON-DGT-PC0598
-WON-DGT-PC0597
-WON-DGT-PC0596
-WON-DGT-PC0595
+WON-DGT-PC0589 ansible_host=10.111.84.234
+WON-DGT-PC0590 ansible_host=10.111.84.230
+WON-DGT-PC0591 ansible_host=10.111.86.156
+WON-DGT-PC0592 ansible_host=10.111.86.179
+WON-DGT-PC0593 ansible_host=10.111.84.153
+WON-DGT-PC0594 ansible_host=10.111.84.78
+WON-DGT-PC0600 ansible_host=10.111.84.188
+WON-DGT-PC0599 ansible_host=10.111.84.150
+WON-DGT-PC0598 ansible_host=10.111.84.202
+WON-DGT-PC0597 ansible_host=10.111.84.240
+WON-DGT-PC0596 ansible_host=10.111.84.81
+WON-DGT-PC0595 ansible_host=10.111.84.40
 
 [windowsnodes]
 WON-DGT-PC0620 ansible_host=10.111.84.238
