--- a/hosts.ini
+++ b/hosts.ini
@@ -1,9 +1,10 @@
 [BAY_N]
-WON-DGT-PC0590 ansible_host=127.0.12.90
+WON-DGT-PC0590 ansible_host=127.0.12.90 ansible_port=20590
+WON-DGT-PC0589 ansible_host=127.0.12.90 ansible_port=20589
 
 
 [troubleshooting]
-WON-DGT-PC0589 ansible_host=10.111.84.234
+WON-DGT-PC0589 ansible_host=10.111.84.234 
 WON-DGT-PC0590 ansible_host=127.0.12.90
 WON-DGT-PC0591 ansible_host=10.111.86.156
 WON-DGT-PC0592 ansible_host=10.111.86.179
@@ -32,4 +33,3 @@ ansible_winrm_read_timeout_sec=9
 
 [all:vars]
 ansible_become_pass=w0nd3r$c0
-ansible_port=20590
