--- a/hosts.ini
+++ b/hosts.ini
@@ -1,6 +1,7 @@
 [BAY_N]
 WON-DGT-PC0590 ansible_host=127.0.12.90 ansible_port=20590
 WON-DGT-PC0589 ansible_host=127.0.12.89 ansible_port=20589
+WON-DGT-PC0595 ansible_host=127.0.12.95 ansible_port=20595
 
 
 [troubleshooting]
