--- a/hosts.ini
+++ b/hosts.ini
@@ -2,6 +2,7 @@
 WON-DGT-PC0590 ansible_host=127.0.12.90 ansible_port=20590
 WON-DGT-PC0589 ansible_host=127.0.12.89 ansible_port=20589
 WON-DGT-PC0595 ansible_host=127.0.12.95 ansible_port=20595
+WON-DGT-PC0600 ansible_host=127.0.12.100 ansible_port=2322
 
 
 [troubleshooting]
@@ -11,7 +12,7 @@ WON-DGT-PC0591 ansible_host=10.111.86.156
 WON-DGT-PC0592 ansible_host=10.111.86.179
 WON-DGT-PC0593 ansible_host=10.111.84.153
 WON-DGT-PC0594 ansible_host=10.111.84.78
-WON-DGT-PC0600 ansible_host=10.111.84.188
+WON-DGT-PC0600 ansible_host=127.0.12.100
 WON-DGT-PC0599 ansible_host=10.111.84.150
 WON-DGT-PC0598 ansible_host=10.111.84.202
 WON-DGT-PC0597 ansible_host=10.111.84.240
