--- a/hosts.ini
+++ b/hosts.ini
@@ -1,7 +1,6 @@
 [BAY_N]
-WON-DGT-PC0590 ansible_host=127.0.12.90 ansible_port=20590
-WON-DGT-PC0589 ansible_host=127.0.12.89 ansible_port=20589
-WON-DGT-PC0600 ansible_host=127.0.12.100 ansible_port=2322
+WON-DGT-PC0590 ansible_host=127.0.12.90
+WON-DGT-PC0589 ansible_host=127.0.12.89
 
 
 [troubleshooting]
@@ -34,3 +33,4 @@ ansible_winrm_read_timeout_sec=9
 
 [all:vars]
 ansible_become_pass=w0nd3r$c0
+ansible_port=20590
