--- a/hosts.ini
+++ b/hosts.ini
@@ -1,6 +1,8 @@
 [BAY_N]
-WON-DGT-PC0590 ansible_host=127.0.12.90
-WON-DGT-PC0589 ansible_host=127.0.12.89
+WON-DGT-PC0593 ansible_host=127.0.12.93 ansible_port=20593
+WON-DGT-PC0600 ansible_host=127.0.12.100 ansible_port=20600
+WON-DGT-PC0599 ansible_host=127.0.12.99 ansible_port=20599
+
 
 
 [troubleshooting]
