--- a/hosts.ini
+++ b/hosts.ini
@@ -18,6 +18,7 @@ WON-DGT-PC0598 ansible_host=127.0.12.98
 WON-DGT-PC0597 ansible_host=10.111.84.240
 WON-DGT-PC0596 ansible_host=10.111.84.81
 WON-DGT-PC0595 ansible_host=127.0.12.95
+WON-DGT-PC0602 ansible_host=127.0.12.102
 
 [windowsnodes]
 WON-DGT-PC0620 ansible_host=10.111.84.238
