--- a/hosts.ini
+++ b/hosts.ini
@@ -1,7 +1,7 @@
 [BAY_N]
-ansible_host=WON-DGT-PC0598 ansible_port=2322
-ansible_host=WON-DGT-PC0599 ansible_port=2322
-ansible_host=WON-DGT-PC0602 ansible_port=2322
+WON-DGT-PC0598 ansible_host=WON-DGT-PC0598 ansible_port=2322
+WON-DGT-PC0599 ansible_host=WON-DGT-PC0599 ansible_port=2322
+WON-DGT-PC0602 ansible_host=WON-DGT-PC0602 ansible_port=2322
 
 
 
