--- a/hosts.ini
+++ b/hosts.ini
@@ -16,6 +16,9 @@ WON-DGT-PC0600 ansible_host=127.0.12.100
 WON-DGT-PC0597 ansible_host=10.111.84.240
 WON-DGT-PC0596 ansible_host=10.111.84.81
 WON-DGT-PC0595 ansible_host=127.0.12.95
+WON-DGT-PC0598 ansible_host=WON-DGT-PC0598
+WON-DGT-PC0599 ansible_host=WON-DGT-PC0599
+WON-DGT-PC0602 ansible_host=WON-DGT-PC0602
 
 [windowsnodes]
 WON-DGT-PC0620 ansible_host=10.111.84.238
