--- a/inventory.ini
+++ b/inventory.ini
@@ -4,9 +4,9 @@ ansible_port=2322
 ansible_connection=ssh
 
 [dgt-workstations-4th-floor-bay-a]
-WON-DGT-PC0598 ansible_host=WON-DGT-PC0598 ansible_port=2322
-WON-DGT-PC0599 ansible_host=WON-DGT-PC0599 ansible_port=2322
-WON-DGT-PC0602 ansible_host=WON-DGT-PC0602 ansible_port=2322
+WON-DGT-PC0598 ansible_host=WON-DGT-PC0598
+WON-DGT-PC0599 ansible_host=WON-DGT-PC0599
+WON-DGT-PC0602 ansible_host=WON-DGT-PC0602
 
 [dgt-workstations-4th-floor-bay-b]
 [dgt-workstations-4th-floor-bay-c]
