--- a/inventory.ini
+++ b/inventory.ini
@@ -8,6 +8,11 @@ WON-DGT-PC0598 ansible_host=WON-DGT-PC0598
 WON-DGT-PC0599 ansible_host=WON-DGT-PC0599
 WON-DGT-PC0602 ansible_host=WON-DGT-PC0602
 
+[zorinnodes]
+WON-DGT-PC0598 ansible_host=WON-DGT-PC0598
+WON-DGT-PC0599 ansible_host=WON-DGT-PC0599
+WON-DGT-PC0602 ansible_host=WON-DGT-PC0602
+
 [dgt-workstations-4th-floor-bay-b]
 [dgt-workstations-4th-floor-bay-c]
 [dgt-workstations-4th-floor-bay-d]
